# cfgzip

./: .gitignore  CHANGELOG.md  LICENSE  README-pypi.md  README.md  pyproject.toml
.github/workflows/: ci.yml
cfgzip/: __init__.py  utils.py
cfgzip/generation/: __init__.py  mask_translator.py
cfgzip/generation/logits_processors/: base.py  llguidance_processor.py  transformers_cfg_processor.py  xgrammar_processor.py
cfgzip/preprocessing/: __init__.py  compute_token_classes.py  normalize_cfg.py  parse_cfg_str.py  parse_gbnf.py  preprocess.py  utils.py
tests/: test_e2e.py  test_parse_gbnf.py
