[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cfgzip"
dynamic = ["version"]
description = "Token vocabulary compression for constrained LLM decoding"
readme = "README-pypi.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "torch",
    "transformers",
    "interegular",
    "tqdm",
    "psutil",
]

[project.optional-dependencies]
xgrammar = ["xgrammar"]
dev = [
    "pytest",
    "xgrammar",
]

[project.urls]
Homepage = "https://github.com/mjs227/cfgzip"
Repository = "https://github.com/mjs227/cfgzip"

[tool.hatch.version]
path = "cfgzip/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["cfgzip"]
